dev/non_executable_reasons_record_from_random_10k/1970.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
import theano using 
------------------

[0;36m  File [0;32m"<ipython-input-1-5a2e9f7d5b6c>"[0;36m, line [0;32m3[0m
[0;31m    import theano using[0m
[0m                      ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-5a2e9f7d5b6c>, line 3)

Executability                            : False
